--- a/tumblr/tumblr.user.css
+++ b/tumblr/tumblr.user.css
@@ -1,15 +1,30 @@
 /* ==UserStyle==
 @name           [snk] tumblr
-@namespace      snake (terrybogard.gay)
+@namespace      snake (playmoar.neocities.org)
 @version        2.2
 @license        GPL-3.0-or-later
 @preprocessor   stylus
 
 @var checkbox borders "hide borders" 1
+@var checkbox communities "hide communities" 0
+@var checkbox messages "hide messages" 0
+@var checkbox inbox "hide inbox" 0
 @var checkbox tabs "hide dashboard tabs" 0
-@var checkbox experimental "[experimental] center blog popups" 0
+@var checkbox popup "center blog popups" 0
 ==/UserStyle== */
 @-moz-document domain("www.tumblr.com") {
+    
+/* centered blog popups */
+if popup {
+  .vM8CJ { display:none!important; }
+  .raBdW { max-width:600px; }
+  .pKQCB { max-width:600px; }
+  @media (min-width: 990px) {
+    .RkANE.r1Zq6 {
+      width:600px;
+    }
+  }
+}
 
 /* remove column borders */
 if borders {
@@ -29,14 +44,29 @@ if borders {
   background:transparent!important;
 }
 
-/* REMOVAL ### */
+if communities {
+  [href*="/communities/browse"] {
+    display:none!important;
+  }
+}
+
+if messages {
+  [aria-label="Messages"] {
+    display:none!important;
+  }
+}
+
+if inbox {
+  [href*="/inbox"] {
+    display:none!important;
+  }
+}
+
 /* left sidebar */
 [href*="/explore"] /* explore */
-[href*="/live"], /* live */
 .visx-linepath, /* activity graph */
 /* account v */
-#account_subnav > li.g8SYn.IYrO9 > .tDT48 > .a132D > .jF6A2, /* extra number counts on like / follower link */
-[href*="/changes"], /* what's new */
+#account_subnav > li.IYrO9 > .tDT48 > .a132D > .jF6A2, span.KlOKT /* extra number counts on like / follower link */
 [href*="/help"], /* help */
 [href*="/post-plus"], /* post+ */
 [href*="/blaze"], /* blaze */
@@ -53,25 +83,14 @@ if borders {
 .HphhS, /* check these out header */
 .kDCXR.q1ZAL, /* check these out carousel */
 /* POSTS ### */
-[aria-label="Blaze"] /* blaze button */
-{ display:none!important; }
+[aria-label="Blaze"] /* blaze button */ {
+    display:none!important;
+}
 
 /* hide dashboard tabs */
 if tabs {
   .X4W3M.Dk06o {
     display:none!important;
-  }
-}
-
-/* experimental - centered blog popups */
-if experimental {
-  .vM8CJ { display:none!important; }
-  .raBdW { max-width:600px; }
-  .pKQCB { max-width:600px; }
-  @media (min-width: 990px) {
-    .RkANE.r1Zq6 {
-      width:600px;
-    }
   }
 }
 
